[gd_scene load_steps=5 format=3 uid="uid://bni2lj3810qtb"]

[ext_resource type="StyleBox" uid="uid://b7xomye4t7xcc" path="res://panel_grey_style_box_flat.tres" id="1_a42w7"]
[ext_resource type="Script" uid="uid://bj85u5jxwylrm" path="res://setting.gd" id="1_q554q"]
[ext_resource type="PackedScene" uid="uid://b3eyhfc1nbaj" path="res://file_selector.tscn" id="2_110nh"]
[ext_resource type="Script" uid="uid://dxlfrh4iiwt4s" path="res://v_box_container.gd" id="3_twti6"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q554q")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("1_a42w7")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainPanelContainer" type="PanelContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/MainPanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/MainPanelContainer/VBoxContainer"]
layout_mode = 2
text = "Main JSON Path"
horizontal_alignment = 1

[node name="main_file_selector" parent="Panel/VBoxContainer/MainPanelContainer/VBoxContainer" instance=ExtResource("2_110nh")]
layout_mode = 2

[node name="Label2" type="Label" parent="Panel/VBoxContainer/MainPanelContainer/VBoxContainer"]
layout_mode = 2
text = "Main Image Path"
horizontal_alignment = 1

[node name="main_image_file_selector" parent="Panel/VBoxContainer/MainPanelContainer/VBoxContainer" instance=ExtResource("2_110nh")]
layout_mode = 2

[node name="ModPanelContainer" type="PanelContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/ModPanelContainer"]
layout_mode = 2
script = ExtResource("3_twti6")

[node name="Label" type="Label" parent="Panel/VBoxContainer/ModPanelContainer/VBoxContainer"]
layout_mode = 2
text = "Mod Path"
horizontal_alignment = 1

[node name="Button" type="Button" parent="Panel/VBoxContainer/ModPanelContainer/VBoxContainer"]
layout_mode = 2
text = "Add More"

[connection signal="on_dir_changed" from="Panel/VBoxContainer/MainPanelContainer/VBoxContainer/main_file_selector" to="." method="_on_dir_changed"]
[connection signal="on_dir_changed" from="Panel/VBoxContainer/MainPanelContainer/VBoxContainer/main_image_file_selector" to="." method="_on_dir_changed"]
[connection signal="on_dir_changed" from="Panel/VBoxContainer/ModPanelContainer/VBoxContainer" to="." method="_on_dir_changed"]
[connection signal="pressed" from="Panel/VBoxContainer/ModPanelContainer/VBoxContainer/Button" to="Panel/VBoxContainer/ModPanelContainer/VBoxContainer" method="_on_button_pressed"]
